<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="app_name">Java_shparg</string>
    <string name="str1">Добро пожаловать!</string>
    <string name="str2">Введите своё имя</string>
    <string name="str3">Выполнил Шандер Д.А. (205с9)</string>
    <string name="str4">Начать</string>

    <string name="ing1">Соус</string>
    <string name="ing2">Томаты</string>
    <string name="ing3">Лук</string>
    <string name="ing4">Ветчина</string>
    <string name="ing5">Куриная грудка</string>
    <string name="ing6">Маслины</string>
    <string name="ing7">Сыр</string>
    <string name="ing8">Укроп</string>

</resources>