<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/fon"
    >


    <TextView
        android:id="@+id/welcome"
        android:text="@string/str1"
        style="@style/text_style1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="23dp"
        tools:layout_editor_absoluteY="267dp"
        android:verticalScrollbarPosition="defaultPosition"
        app:flow_verticalAlign="bottom"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.2"
        />

    <EditText
        android:id="@+id/username"
        style="@style/edit_text1"
        android:hint="@string/str2"
        tools:layout_editor_absoluteX="40dp"
        tools:layout_editor_absoluteY="373dp"
        tools:ignore="MissingConstraints"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome"
    />

    <TextView
        android:text="@string/str3"
        style="@style/text_style2"
        tools:layout_editor_absoluteX="188dp"
        tools:layout_editor_absoluteY="616dp"
        tools:ignore="MissingConstraints"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btn_start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.5"
    />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_start"
        style="@style/btn_style1"
        android:text="@string/str4"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="130dp"
        tools:layout_editor_absoluteY="449dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>